# tiny-dfr-omarchy

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PKGBUILD  README.md  SESSION_SUMMARY.md  SKILL.md  install-tiny-dfr.sh  sync-config.sh  tiny-dfr-omarchy.install
etc/omarchy/hooks/: theme-set
etc/systemd/system/: omarchy-dynamic-function-row-daemon.service  suspend-fix-t2.service  tiny-dfr-omarchy.service  tiny-dfr.service
share/tiny-dfr/: commands.toml  config.toml  expandables.toml  hyprland.toml
src/: backlight.rs  battery_monitor.rs  bce_interface.rs  config.rs  display.rs  hyprland.rs  icon_cache.rs  keyboard_backlight.rs  main.rs  omarchy_theme.rs  system_monitor.rs  user_cache.rs
