[package]
name = "tiny-dfr"
version = "0.6.5-omarchy"
edition = "2024"
license = "MIT AND Apache-2.0"
description = "Dynamic function row daemon for Apple MacBook Touch Bar - Omarchy fork with enhanced configuration and suspend/resume support"
homepage = "https://github.com/artjsalina5/tiny-dfr-omarchy"
repository = "https://github.com/artjsalina5/tiny-dfr-omarchy"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cairo-rs = { version = "0.20", default-features = false, features = [
  "freetype",
  "png",
] }
librsvg-rebind = "0.1"
drm = "0.14"
anyhow = "1"
input = "0.8"
libc = "0.2"
input-linux = { version = "0.7", features = ["serde"] }
input-linux-sys = "0.9"
nix = { version = "0.29", features = ["event", "signal", "inotify"] }
privdrop = "0.5.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rand = "0.8"
freetype-rs = "0.37"
freedesktop-icons = "0.4.0"
chrono = { version = "0.4", features = ["unstable-locales"] }
udev = "0.9"

[build-dependencies]
pkg-config = "0.3"
